# vix_option

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  convert_data.py  corr_contrast.py  data_processor.py  generate_Vt.py  pyproject.toml  result_analysis.py  run_all_model.py  run_model_contrast.py  run_model_params_optuna.py  run_qlib.py  run_qlib_rl.py  utils.py  xgboost_optuna_1.py
backtest/: __init__.py  convert_data.py  dynamic_pipeline.py  qlib_backtest.py  report.py  run_qlib_backtest.py  simple_backtest.py
data/: allVIXinfo.feather  indexdata.feather
data_process/: __init__.py  data_processor.py  generate_Vt.py
k-fold cross validation/: __init__.py
k-means/: k-means.py
model_contrast_config/: Fix_GroupVixHandler20230711_JiaQiRecord_allmodels.yaml  Fix_Handler17_JiaQiRecord_ynorm.yaml  Fix_Handler88_JiaQiRecord_ynorm.yaml  GRU_XGB_LINEAR.yaml  models.yaml
model_optuna_config/: ALSTM.yaml  GRU.yaml  LSTM.yaml  TCN.yaml  Transformer.yaml  XGB.yaml
optu/: __init__.py  config.yaml  cvx.py  longshortback_optuna.py  model_optu.py  xgboost_op_1.py
qlib_scripts/: dump_bin.py
tests/: __init__.py  conftest.py  test_data_processor.py  test_genarate_Vt.py  test_record.py
utils/: __init__.py  path.py  qlib.py  time.py
yaml_config/: ADD_test.yaml  ARIMA.yaml  Embedding_GRU_dynamic_longshortback.yaml  GATs_test.yaml  GRU_5ret_dynamic_simpleback.yaml  GRU_6labels_dynamic_longshortback.yaml  GRU_dynamic_GroupVixHandler_longshortback.yaml  GRU_dynamic_longshortback.yaml  GRU_dynamic_simpleback.yaml  Garch.yaml  JiaQiBenchRecord.yaml  LightGBM_dynamic_longshortback.yaml  LightGBM_dynamic_simpleback.yaml  MLP.yaml  MLP_test.yaml  MultiOutputGRU_dynamic_Jiaqirecord.yaml  TCN.yaml  TabNet.yaml  Transformer.yaml  XGB_dynamic_GroupVix20230711Handler_jiaqirecord.yaml  XGB_dynamic_GroupVixHandler_longshortback.yaml  XGB_dynamic_simpleback.yaml  __init__.py  gru_xt.yaml  gru_xt_one_for_test.yaml  (+6 more)
(+160 files in other folders)
