[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black==22.12.0",
    "flake8==5.0.4",
    "pre-commit==3.1.1",
    "jupyter==1.0.0",
    "matplotlib==3.7.1",
    "pyqlib==0.9.1",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "wsy", email = "631535207@qq.com"},
]
dependencies = [
    "pandas==1.5.3",
    "pyarrow==11.0.0",
    "pytest==7.2.2",
]
requires-python = ">=3.8,<3.9"
license = {text = "MIT"}
