[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "black==22.12.0",
    "flake8==5.0.4",
    "pre-commit==3.1.1",
    "jupyter==1.0.0",
    "torch==1.7.1+cu110",
]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "wsy", email = "631535207@qq.com"},
]
dependencies = [
    "pandas==1.5.3",
    "pyarrow==11.0.0",
    "pytest==7.2.2",
    "ffn==0.3.6",
    "scikit-learn==0.23.2",
    "openpyxl==3.1.2",
    "pyfolio==0.9.2",
    "torch==1.7.1",
    "xgboost==1.2.1",
    "pyecharts==2.0.1",
    "pyqlib==0.9.1",
    "matplotlib==3.7.1",
    "yahooquery==2.3.1",
]
requires-python = ">=3.8,<3.9"
license = {text = "MIT"}

[[tool.pdm.source]]
name = "torch-windows-gpu"
url = "https://download.pytorch.org/whl/torch/"
type = "find_links"